final time table

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-<h2 style="text-align:center;">Weekly Time Table</h2>
+<h2 style="text-align:center;">Marwadi University Time Table</h2>
 
 <table>
   <tr>
